<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:title="@string/action_new"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_more"
        android:orderInCategory="100"
        android:title="@string/action_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_menu_info"
                android:icon="@drawable/ic_menu_edit"
                android:orderInCategory="100"
                android:title="@string/action_menu_info"
                app:showAsAction="always">
            </item>
            <item
                android:id="@+id/action_menu_chart"
                android:icon="@drawable/ic_menu_chart"
                android:orderInCategory="100"
                android:title="@string/action_menu_chart"
                app:showAsAction="always">
            </item>
            <item
                android:id="@+id/action_menu_about"
                android:icon="@drawable/ic_menu_about"
                android:orderInCategory="100"
                android:title="@string/action_menu_about"
                app:showAsAction="always">
            </item>
        </menu>
    </item>

</menu>