<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_more"
        android:orderInCategory="100"
        android:title="@string/action_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_menu_new"
                android:icon="@drawable/ic_menu_new"
                android:orderInCategory="100"
                android:title="@string/action_menu_new"
                app:showAsAction="always">
            </item>
            <item
                android:id="@+id/action_menu_delete"
                android:icon="@drawable/ic_menu_edit"
                android:orderInCategory="100"
                android:title="@string/action_menu_delete"
                app:showAsAction="always">
            </item>
            <item
                android:id="@+id/action_menu_edit"
                android:icon="@drawable/ic_menu_edit"
                android:orderInCategory="100"
                android:title="@string/action_menu_edit"
                app:showAsAction="always">
            </item>
        </menu>
    </item>

</menu>